using github pages to host the scripts

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 </head>
 <body>
     <div id="so-card-widget" data-userid="1482899" data-theme="basic"></div>
-    <script type="text/javascript" src="//cdn.rawgit.com/mudassir0909/stackoverflow-card/master/dist/so-card-widget.min.js"></script>
+    <script type="text/javascript" src="//mudassir0909.github.io/stackoverflow-card/dist/so-card-widget.min.js"></script>
 </body>
 </html>
