--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </style>
 </head>
 <body>
-    <div id="so-card-widget" data-userid="1482899" data-theme="basic"></div>
-    <script type="text/javascript" src="//mudassir0909.github.io/stackoverflow-card/dist/so-card-widget.min.js"></script>
+    <div id="so-card-widget" data-userid="1482899" data-theme="default"></div>
+    <script type="text/javascript" src="//mudassir0909.github.io/stackoverflow-card/dist/1.0.0/so-card-widget.min.js"></script>
 </body>
 </html>
