--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 </head>
 <body>
     <div id="so-card-widget" data-userid="1482899" data-theme="default"></div>
-    <script type="text/javascript" src="dist/so-card-widget.js"></script>
+    <script type="text/javascript" src="//mudassir0909.github.io/stackoverflow-card/dist/so-card-widget.min.js"></script>
 </body>
 </html>
